fix(user-service): optimize preference JSONB query and add transaction (55-2398)