@@ -10,6 +10,7 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 import java.util.List;
 import java.util.stream.Collectors;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class UserService {
@@ -66,13 +67,15 @@ public class UserService {
         return new UserResponseDTO(userRepository.save(user));
     }
 
+    @Transactional(readOnly = true)
     public List<UserResponseDTO> filterByPreference(String key, String value) {
-        if (key == null || key.isBlank() || value == null || value.isBlank()) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
-                    "key and value must not be blank");
+        if (key.isBlank() || value.isBlank()) {
+            throw new IllegalArgumentException("key and value must not be blank");
         }
-        return userRepository.findByPreference(key, value).stream()
+
+        String prefJson = String.format("{\"%s\": \"%s\"}", key, value);
+        return userRepository.findByPreference(prefJson).stream()
                 .map(UserResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
